<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/editViewToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/MenuStyle"
            app:title="@string/edit"
            app:titleTextColor="@color/white"/>

    <TextView
            android:layout_marginTop="@dimen/text_margin_top"
            android:layout_marginStart="@dimen/text_margin_start"
            android:layout_marginBottom="@dimen/edit_margin_bottom"
            android:text="@string/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editName"
                android:layout_marginStart="@dimen/text_margin_start"
                android:layout_marginEnd="@dimen/text_margin_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginTop="@dimen/text_margin_top"
            android:layout_marginStart="@dimen/text_margin_start"
            android:layout_marginBottom="@dimen/edit_margin_bottom"
            android:text="@string/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editSurname"
            android:layout_marginStart="@dimen/text_margin_start"
            android:layout_marginEnd="@dimen/text_margin_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginTop="@dimen/text_margin_top"
            android:layout_marginStart="@dimen/text_margin_start"
            android:layout_marginBottom="@dimen/edit_margin_bottom"
            android:text="@string/_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editDate"
            android:layout_marginStart="@dimen/text_margin_start"
            android:layout_marginEnd="@dimen/text_margin_start"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"/>

</LinearLayout>