<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_profile">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/profileViewToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/MenuStyle"
                app:title="@string/profile"
                app:titleTextColor="@color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_profile_image"
                    android:layout_marginBottom="@dimen/margin_bottom">

                <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_profile_image"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_launcher_background"/>

                <LinearLayout
                        android:layout_gravity="bottom"
                        android:layout_marginStart="@dimen/text_margin_start"
                        android:layout_marginBottom="@dimen/name_margin_bottom"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/profileViewFirstName"
                            android:layout_width="wrap_content"
                            android:textSize="@dimen/title_text_size"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/text_margin_start"
                            android:textColor="@color/white"
                            android:text="@string/name"/>

                    <TextView
                            android:textColor="@color/white"
                            android:id="@+id/profileViewLastName"
                            android:layout_width="wrap_content"
                            android:textSize="@dimen/title_text_size"
                            android:layout_height="wrap_content"
                            android:text="@string/name"/>

                </LinearLayout>
            </FrameLayout>

                <TextView
                        android:layout_marginStart="@dimen/text_margin_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/small_text"
                        android:text="@string/birthday"/>

                <TextView
                        android:layout_marginStart="@dimen/text_margin_start"
                        android:id="@+id/profileBirthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/normal_text_size"
                        android:text="@string/__birthday"/>

                <TextView
                        android:layout_marginTop="@dimen/text_margin_top"
                        android:layout_marginStart="@dimen/text_margin_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/small_text"
                        android:text="@string/city"/>

                <TextView
                        android:id="@+id/profileCity"
                        android:layout_marginStart="@dimen/text_margin_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@color/black"
                        android:text="@string/city"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:layout_marginTop="@dimen/post_margin_top"
                            android:layout_marginStart="@dimen/text_margin_start"
                            android:text="@string/posts"
                            android:textStyle="bold"
                            android:textSize="@dimen/normal_text_size"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/profileViewFeed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>